// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <ImagesDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <ImagesDetailPanel
      fadeImg={[Function]}
      isBtnShowPanel={true}
      isOpen={false}
      moveImg={[Function]}
      name="imagesPanel"
      title="Image(s) Series"
      zoomin={[Function]}
      zoomout={[Function]}
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper dicom-container"
          >
            <ReactIdSwiper
              ContainerEl="div"
              WrapperEl="div"
              allowTouchMove={true}
              containerClass="swiper-container"
              init={true}
              navigation={
                Object {
                  "nextEl": ".swiper-button-next",
                  "prevEl": ".swiper-button-prev",
                }
              }
              pagination={
                Object {
                  "clickable": true,
                  "el": ".swiper-pagination",
                  "type": "bullets",
                }
              }
              slideClass="swiper-slide"
              spaceBetween={30}
              wrapperClass="swiper-wrapper"
            >
              <div
                key="0"
              >
                <CornerstoneImage
                  imageId="http://46.101.95.245/orthanc/instances/ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c8/preview"
                  imageLoaded={[Function]}
                  index={0}
                  instanceIds={
                    Array [
                      "ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c8",
                    ]
                  }
                  isVisibleCornerstone={true}
                  visibleCornerstone={[Function]}
                />
              </div>
            </ReactIdSwiper>
          </div>
        </div>
      </div>
    </ImagesDetailPanel>
  </div>
</div>
`;

exports[`Component <ImagesDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="imagesDetailPanel"
      title="Image Details"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Modality
              </label>
              <div
                className="form-control-static"
              />
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Protocol Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Station Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Operator Name
              </label>
              <div
                className="form-control-static"
              />
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Date
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Time
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Author
              </label>
              <div
                className="form-control-static"
              />
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Series No:
                :
              </label>
              <div
                className="form-control-static"
              />
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ImagesDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <ImagesDetailPanel
      fadeImg={[Function]}
      isBtnShowPanel={true}
      isOpen={false}
      moveImg={[Function]}
      name="imagesPanel"
      title="Image(s) Series"
      zoomin={[Function]}
      zoomout={[Function]}
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper dicom-container"
          >
            <ReactIdSwiper
              ContainerEl="div"
              WrapperEl="div"
              allowTouchMove={true}
              containerClass="swiper-container"
              init={true}
              navigation={
                Object {
                  "nextEl": ".swiper-button-next",
                  "prevEl": ".swiper-button-prev",
                }
              }
              pagination={
                Object {
                  "clickable": true,
                  "el": ".swiper-pagination",
                  "type": "bullets",
                }
              }
              slideClass="swiper-slide"
              spaceBetween={30}
              wrapperClass="swiper-wrapper"
            >
              <div
                key="0"
              >
                <CornerstoneImage
                  imageId="http://46.101.95.245/orthanc/instances/ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c7/preview"
                  imageLoaded={[Function]}
                  index={0}
                  instanceIds={
                    Array [
                      "ecd967b0-aaec17a2-860b3925-91d8ef8b-1932d1c7",
                    ]
                  }
                  isVisibleCornerstone={true}
                  visibleCornerstone={[Function]}
                />
              </div>
            </ReactIdSwiper>
          </div>
        </div>
      </div>
    </ImagesDetailPanel>
    <PluginDetailPanel
      editedPanel={Object {}}
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="imagesDetailPanel"
      title="Image Details"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Modality
              </label>
              <div
                className="form-control-static"
              >
                CT
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Protocol Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    test
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Station Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    CT01OC0
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Operator Name
              </label>
              <div
                className="form-control-static"
              >
                Anonymized
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    30-Apr-1993
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Series Time
                  </label>
                  <div
                    className="form-control-static"
                  >
                    12:01
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Author
              </label>
              <div
                className="form-control-static"
              >
                test
              </div>
            </div>
            <div
              className="form-group"
            >
              <label
                className="control-label"
              >
                Series No:
                :
              </label>
              <div
                className="form-control-static"
              >
                365
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
